[package]
authors = ["0xAlcibiades <alcibiades@warlock.xyz>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "High level server for hyper and tower."
edition = "2021"
homepage = "https://github.com/warlock-labs/postel"
keywords = ["tcp", "tls", "http", "hyper", "tokio"]
license = "MIT"
name = "postel"
readme = "README.md"
repository = "https://github.com/warlock-labs/postel"
version = "0.7.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dependencies]
async-stream = "0.3.6"
bytes = "1.9.0"
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.5.2"
hyper-util = { version = "0.1.10", features = ["server", "tokio", "server-auto", "server-graceful", "service", "http2"] }
pin-project = "1.1.7"
pprof = { version = "0.13.0", features = ["flamegraph"], optional = true }
ring = "0.17.8"
rustls = { version = "0.23.20", features = ["zlib", "aws_lc_rs"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.42.0", features = ["net", "macros", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26.1", features = ["aws_lc_rs"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.13"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
hyper = { version = "1.5.2", features = ["client"] }
hyper-rustls = { version = "0.27.5", features = ["http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2"] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
rcgen = "0.13.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "http2"] }
ring = "0.17.8"
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "test-util", "time", "signal"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
tracing-subscriber = "0.3.19"

[[bench]]
name = "hello_world_tower_hyper_tls_tcp"
harness = false

[[example]]
name = "tower_service_fn"
path = "examples/tower_service_fn.rs"

[[example]]
name = "tonic"
path = "examples/tonic.rs"

[features]
default = []
jemalloc = ["tikv-jemallocator"]
dev-profiling = ["pprof"]

[profile.release]
debug = true
