[package]
authors = ["0xAlcibiades <alcibiades@warlock.xyz>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "High level server for hyper and tower."
edition = "2021"
homepage = "https://github.com/warlock-labs/postel"
keywords = ["tcp", "tls", "http", "hyper", "tokio"]
license = "MIT"
name = "postel"
readme = "README.md"
repository = "https://github.com/warlock-labs/postel"
version = "0.7.2"

[dependencies]
async-stream = { version = "0.3.6", default-features = false }
bytes = { version = "1.9.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
http = { version = "1.2.0", default-features = false }
http-body = { version = "1.0.1", default-features = false }
hyper = { version = "1.5.2", default-features = false }
hyper-util = { version = "0.1.10", default-features = false, features = ["server", "tokio", "server-auto", "server-graceful", "service", "http2"] }
pin-project = { version = "1.1.7", default-features = false }
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"], default-features = false, optional = true }
rustls = { version = "0.23.20", default-features = false, features = ["std"]}
rustls-pemfile = { version = "2.2.0", default-features = false, features = ["std"] }
tokio = { version = "1.42.0", default-features = false, features = ["net", "macros", "rt-multi-thread", "time"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["ring"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["net"] }
tracing = { version = "0.1.41", default-features = false }
futures-util = "0.3.31"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["html_reports", "async_tokio"] }
hyper = { version = "1.5.2", default-features = false, features = ["client"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "http2"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client", "client-legacy", "http2"] }
lazy_static = { version = "1.5.0", default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
rcgen = { version = "0.13.1", default-features = false, features = ["crypto", "aws_lc_rs"] }
rustls = { version = "0.23.20", default-features = false, features = ["zlib", "aws_lc_rs", "std"] }
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "net", "test-util", "time", "signal"] }
tonic = { version = "0.12.3", default-features = false, features = ["tls", "transport"] }
tonic-health = { version = "0.12.3", default-features = false, features = ["transport"] }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
http-body-util = { version = "0.1.2", default-features = false }
tonic-reflection = { version = "0.12.3", default-features = false, features = ["server"] }
tonic-types = { version = "0.12.3", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }

[[bench]]
name = "hello_world_tower_hyper_tls_tcp"
harness = false

[[example]]
name = "tower_service_fn"
path = "examples/tower_service_fn.rs"

[[example]]
name = "tonic"
path = "examples/tonic.rs"

[features]
default = []
dev-profiling = ["pprof", "pprof/criterion", "pprof/flamegraph"]

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
